--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -18,9 +18,6 @@
     --link-secondary: #454748;
 }
 
-html, body:before {
-
-}
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -29,14 +26,11 @@ html, body {
     height:100%;
 }
 
-#main {
-    background:var(--background);
-}
+
 
 .page {
     color: var(--font-color);
     background: var(--background);
-    overflow-y:hidden;
     height:100%;
 }
 
@@ -194,8 +188,6 @@ main .content {
 
     .content {
         height: 100%;
-        overflow-y: visible;
-        position: fixed;
         background: var(--background);
     }
 }
